fixed an alignment issue in submenu

--- a/css/nav.css
+++ b/css/nav.css
@@ -53,6 +53,7 @@ li:hover ul#submenu {
 	visibility: visible;
 }
 #submenu li {
+	text-align: center;
     /* display: flex;
     justify-content: center; */
 	float: none;
@@ -61,5 +62,8 @@ li:hover ul#submenu {
 	background: rgba(255,255,255,.3);
 }
 #submenu a {
+	display: flex;
+	align-content: center;
+	justify-content: center;
 	background-color:rgba(255,255,255,.1);
 }
